<resources>
    <string name="app_name">平面几何画板</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="menu_items_pen">笔</string>
    <string name="menu_items_color">取色器</string>
    <string name="menu_items_clear">清屏</string>
    <string name="menu_items_eraser">橡皮擦</string>
    <string name="menu_items_coordinate">坐标轴</string>
    <string name="menu_items_point">描点</string>
    <string name="menu_items_move">移动</string>
    <string name="menu_items_function">函数</string>
    <string name="menu_items_segment">线段</string>
    <string name="menu_items_triangle">三角形</string>
    <string name="menu_items_rectangular">矩形</string>
    <string name="menu_items_circle">圆形</string>
    <string name="menu_items_revoke">撤销</string>
    <string name="menu_items_undo">反撤销</string>
    <string name="menu_items_share">分享</string>
    <string name="menu_items_save">保存</string>


    <string name="toast_no_more_record">无更多记录</string>
    <string name="toast_save_success">保存成功</string>
    <string name="toast_save_fail">保存失败</string>
    <string name="toast_no_file_read_and_write_permission">无文件读写权限</string>
    <string name="toast_parameter_is_not_complete">参数不全</string>


    <string name="dialog_title">请选择画笔颜色:)</string>
    <string name="dialog_positive">确认</string>
    <string name="dialog_negative">取消</string>

    <string name="dialog_title_function_selector">请选择绘制函数类型:)</string>
    <string-array name="planets_array">
        <item>一次函数(y = a * x + b)</item>
        <item>幂函数(y = a * x ^c + b)</item>
        <item>指数函数(y = a * c^x + b)</item>
        <item>对数函数(y = a * log(c * x + d) + b)</item>
        <item>三角函数(y = a * sin(c * x + d) + b)</item>
        <item>三角函数(y = a * cos(c * x + d) + b)</item>
        <item>三角函数(y = a * tan(c * x + d) + b)</item>
        <item>三角函数(y = a * cot(c * x + d) + b)</item>
    </string-array>
</resources>