<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/item_pen"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/pen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="@string/menu_items_pen"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_clear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toRightOf="@id/item_pen"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/clear"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="@string/menu_items_clear"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            app:layout_constraintTop_toBottomOf="@id/item_pen"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/item_segment"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/item_pen"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/segment"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="@string/menu_items_segment"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_triangle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/item_clear"
            app:layout_constraintLeft_toRightOf="@id/item_segment"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/triangle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="@string/menu_items_triangle"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_rectangular"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/item_segment"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/rectangular"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:text="@string/menu_items_rectangular"
                android:textSize="12sp"/>
        </LinearLayout>

        <View
            app:layout_constraintTop_toBottomOf="@id/item_rectangular"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>